checkValidity() sometimes asserts in WebUserMediaClient::pageDestroyed https://bugs.webkit.org/show_bug.cgi?id=154029 <rdar://problem/24065022>

Reviewed by Alex Christensen.

* WebCoreSupport/WebUserMediaClient.mm:
(WebUserMediaClient::pageDestroyed): Copy map keys to a vector and clear the map before
  enumerating the vector and canceling the requests. ASSERT that the map is not modified
  during cleanup. Clean up the permission check map.
(WebUserMediaClient::requestUserMediaAccess): Add the request to the map before calling the
  UI delegate in case it works synchronously (as it does in DRT).
(WebUserMediaClient::checkUserMediaPermission): Ditto.
(WebUserMediaClient::cancelUserMediaPermissionCheck): White-space cleanup.
(-[WebUserMediaPolicyListener allow]): Ditto.


Canonical link: https://commits.webkit.org/172133@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196310 268f45cc-cd09-0410-ab3c-d52691b4dbfc